compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_duplicate_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_duplicate_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate record field
   ╭─[tests/fixtures/diagnostics/types/record_duplicate_field.ml:4:30]
 3 │ fn main() {
 4 │   dbg(point { x: 1, y: 2, x: 3 })
   ·                              ┬
   ·                              ╰── field `x` appears more than once in `point`
 5 │ }
   ╰────
  help: keep one value for each declared field
